# Cognibase

./: .gitignore  Dockerfile  Dockerfile.orchestrator  Dockerfile.remote  cyclonedds.xml  docker-compose.sim.yml  docker-compose.yml  requirements.txt  run_dev.sh
DynamixelSDK/: Doxyfile  ReleaseNote.md
DynamixelSDK/c++/: library.properties
DynamixelSDK/python/: pyproject.toml  setup.py
DynamixelSDK/ros/dynamixel_sdk/: CHANGELOG.rst
DynamixelSDK/ros/dynamixel_sdk_custom_interfaces/: CHANGELOG.rst
DynamixelSDK/ros/dynamixel_sdk_examples/: CHANGELOG.rst
agenticros/: .gitignore  .mcp.json  CLAUDE.md  HEARTBEAT.md  README.md  SOUL.md  package.json  pnpm-lock.yaml
agenticros/docker/: Dockerfile.agenticros  Dockerfile.ros2  README.md  docker-compose.cloud.yml  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.robot.yml  docker-compose.yml  ros2_entrypoint.sh
agenticros/docs/: architecture.md  cameras.md  openclaw-releases-and-plugin-routes.md  robot-not-receiving-cmd-vel.md  robot-setup.md  rosclaw-to-agenticros.md  skills.md  teleop.md  zenoh-agenticros.md
agenticros/examples/arm-control/: README.md
agenticros/examples/fleet-patrol/: README.md
agenticros/ros2_ws/src/agenticros_agent/: package.xml  setup.cfg  setup.py
agenticros/ros2_ws/src/agenticros_agent/agenticros_agent/: agent_node.py
agenticros/ros2_ws/src/agenticros_discovery/: package.xml  setup.cfg  setup.py
agenticros/ros2_ws/src/agenticros_discovery/agenticros_discovery/: discovery_node.py
agenticros/ros2_ws/src/agenticros_msgs/: CMakeLists.txt  package.xml
agenticros/ros2_ws/src/agenticros_msgs/msg/: CapabilityManifest.msg
agenticros/ros2_ws/src/agenticros_msgs/srv/: FollowMeGetStatus.srv  FollowMeSetDistance.srv  FollowMeSetTarget.srv  FollowMeStart.srv  GetCapabilities.srv
agenticros/scripts/: activate_workspace.sh  agenticros-proxy.cjs  configure_agenticros.sh  fix-openclaw-control-ui-path.sh  install_rosbridge_from_source.sh  onboard_robot.sh  openclaw-dashboard-url.cjs  run_demo_native.sh  run_robot_rosbridge.sh  setup-openclaw-local.cjs  setup_gateway_plugin.sh  setup_robot.sh  setup_workspace.sh  test-rclnodejs.mts  use-openclaw-2026.2.26.sh  use-openclaw-2026.3.11.sh  zenoh-bridge-ros2dds-robot.json5  zenohd-rosclaw.json5
cognibot/: __init__.py  agent.py  config.py  main.py  mcp_client.py  skill_loader.py
config/: agenticros.json  cognibot.env  cyclonedds.xml
docs/: Agentic System Identity.md  Hybrid MCP-PydanticAI Robotics Architecture.md  Project Roadmap.md  Technical Implementation Guide.md  Tool Definitions.md
skills/: Emergency Escalation.md  Obstacle Resolution.md  Visual Search Heuristics.md
(+9 files in other folders)
