<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>agenticros_agent</name>
  <version>0.0.1</version>
  <description>ROS2 agent node that bridges WebRTC data channels to local DDS for cloud/remote deployments (Mode C)</description>
  <maintainer email="team@plaipin.com">PlaiPin</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>rosbridge_library</depend>

  <exec_depend>python3-aiortc</exec_depend>
  <exec_depend>python3-websockets</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
